// Copyright 2021-present StarRocks, Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package staros.starlog.proto;

import "starlog/common.proto";
import "starlog/extent.proto";
import "starlog/lease.proto";

option java_package = "com.staros.starlog.proto";
option java_multiple_files = true;

message CreateOptions {
    uint32 min_num_replicas = 1;
    uint32 max_num_replicas = 2;
}

message StreamMetadata {
    int64 id = 1;
    string path = 2;
    DataType type = 3;
    repeated ExtentMetadata extents = 4;
    int64 purge_position = 5;
    int64 end_position = 6; 
    int64 meta_version = 7;
    CreateOptions options = 8;
}

enum StreamOpType {
    CREATE_STREAM = 0;
    REMOVE_STREAM = 1;
    OPEN_STREAM = 2;
    CLOSE_STREAM = 3;
    EXTEND_STREAM = 4;
    CHECKIN_STREAM = 5;
    PURGE_STREAM = 6;
}

message StreamOp {
    StreamOpType op = 1;
    StreamMetadata stream = 2;
    LeaseMetadata lease = 3;
}
